paginas href creadas

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <h1>Plate Palette</h1>
     <nav>
         <ul>
-            <li><a href="">Crear Receta</a></li>
-            <li><a href="">Iniciar Sesion</a></li>
-            <li><a href="">Registrarse</a></li>
+            <li><a href="crear_receta.html">Crear Receta</a></li>
+            <li><a href="iniciar_sesión.html">Iniciar Sesion</a></li>
+            <li><a href="registrarse.html">Registrarse</a></li>
         </ul>
     </nav>
     <div class="contenido">
