estilo recetas creado

--- a/crear_receta.html
+++ b/crear_receta.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Pagina sencilla</title>
-    <link rel="stylesheet" type="text/css" href="estilo.css">
+    <link rel="stylesheet" type="text/css" href="estilo_receta.css">
 </head>
 <body>
     <h1>Plate Palette</h1>
@@ -16,7 +16,7 @@
         <div class="articulos">
             <div class="secciones">
                 <div>
-                    <h2>¿Qué es Plate Palette?</h2>
+                    <h2>Crea tu receta</h2>
                     <p> Esta es una plataforma que te permitirá optimizar todos los recursos que tengas en tu cocina y asi utilizarlos de la manera que mas te guste. Te invitamos a generar todas las recetas que quieras y a dejarnos tu calificación.</p>
                 </div>
                 <div><img src="img/hornito.jpg.jpg" alt=""></div>
