inicio de sesión

--- a/iniciar_sesión.html
+++ b/iniciar_sesión.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página de Inicio de Sesión</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Archivo CSS para el estilo -->
+    <link rel="stylesheet" href="estilo_sesion.css"> 
 </head>
 <body>
     <div class="login-container">
         <h2>Iniciar Sesión</h2>
-        <form action="procesar.php" method="POST"> <!-- Cambia "procesar.php" al archivo que procesará el formulario -->
+        <form action="procesar_sesion.php" method="POST"> <!-- Cambia "procesar.php" al archivo que procesará el formulario -->
             <label for="usuario">Usuario:</label>
             <input type="text" id="usuario" name="usuario" required>
             
