--- a/registrarse.html
+++ b/registrarse.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página de Registro de Usuario</title>
-    <link rel="stylesheet" href="estilo_registro.css"> <!-- Archivo CSS para el estilo -->
+    <link rel="stylesheet" href="estilo_registro.css"> 
 </head>
 <body>
     <div class="register-container">
         <h2>Registro de Usuario</h2>
-        <form action="procesar_registro.php" method="POST"> <!-- Cambia "procesar_registro.php" al archivo que procesará el formulario -->
+        <form action="procesar_registro.php" method="POST"> 
             <label for="nombre">Nombre:</label>
             <input type="text" id="nombre" name="nombre" required>
             
