--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Pagina sencilla</title>
+    <title>Plate Palette</title>
     <link rel="stylesheet" type="text/css" href="estilo.css">
 </head>
 <body>
