cree uno de python

--- a/iniciar_sesión.html
+++ b/iniciar_sesión.html
@@ -9,7 +9,7 @@
 <body>
     <div class="login-container">
         <h2>Iniciar Sesión</h2>
-        <form action="procesar_sesion.php" method="POST"> <!-- Cambia "procesar.php" al archivo que procesará el formulario -->
+        <form action="procesar_sesion.php" method="POST"> 
             <label for="usuario">Usuario:</label>
             <input type="text" id="usuario" name="usuario" required>
             
